--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
     
     <script type="text/processing">
     
-      /*  INSERT CODE HERE */
+      var counter = 0;
+      var range = 350;
+
+      function setup() {
+        createCanvas(400, 400);
+      }
+
+      function draw() {
+        background(220);
+        let size = sin(counter)*range;
+        ellipse(width/2, height/2, size, size);
+        counter += 0.03;
+      }
 
     </script>
     <canvas id="sketch" style="border: 1px solid black;"></canvas>
