--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       }
 
     </script>
-    <!--<canvas id="sketch" style="border: 1px solid black;"></canvas>-->
+    
+    <canvas id="defaultCanvas0" class ="p5Canvas" style="border: 1px solid black;"></canvas>
     
   </body>
   
