--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </script>
     
-    <canvas id="defaultCanvas0" style="border: 1px solid black;"></canvas>
+    <canvas id="defaultCanvas0" class="p5Canvas" style="border: 1px solid black;"></canvas>
     
   </body>
   
