--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </script>
     
-    <canvas id="defaultCanvas0" class="p5Canvas" style="width: 600px; height: 600px;" width="1200" height="1200""></canvas>
+    <canvas id="defaultCanvas0" class="p5Canvas" style="width: 600px; height: 600px;" width="1200" height="1200"></canvas>
     
   </body>
   
